fixed styling bug fixing off centered watchlist

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,6 +59,7 @@ h1 {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5em;
+    padding-left: 0;
 }
 
 .Watch-list > li {
